<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Caldroid</string>
    <string name="the_boys">The Boys</string>
    <string name="sun">sun</string>
    <string name="mon">mon</string>
    <string name="tue">tue</string>
    <string name="wed">wed</string>
    <string name="thu">thu</string>
    <string name="fri">fri</string>
    <string name="sat">sat</string>
</resources>
